--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "main": "app.js", 
+  "scripts": {
+    "start" : "node app.js" 
+  },
   "dependencies": {
     "compression": "^1.7.4",
     "ejs": "^3.1.8",
