--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "main": "app.js", 
+  "main": "app.js",
   "scripts": {
-    "start" : "node app.js" 
+    "start": "node app.js"
   },
   "dependencies": {
     "compression": "^1.7.4",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
-    "express-ejs-layouts": "^2.5.1"
+    "express-ejs-layouts": "^2.5.1",
+    "heroku": "^7.60.2"
   }
 }
